more features and bug fixes

--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,9 @@
 *{
   transition: 500ms cubic-bezier(.18,.89,.32,1.28);
 }
-
+body {
+  overflow-x: hidden;
+}
 :root {
   --bs-blue: #0d6efd;
   --bs-indigo: #6610f2;
